dark mode color fix

--- a/main.css
+++ b/main.css
@@ -321,7 +321,7 @@ footer {
 @media (prefers-color-scheme: dark) {
   body,
   section {
-    background-color: rgb(75, 78, 78);
+    background-color: rgb(51, 51, 51);
     color: white;
   }
 
